tests/fixtures/errors/required_index_not_pub.gcl
// Error: required index is not marked `pub`.
index Phase;
